JavaPair first implementatons